# py-risk-simulation

./: Dockerfile  Makefile  Notebooks.docx  ReadMe.md  Repository Structure.txt  Repository_Structure.txt  Simulating Murex Risk Pipelines in Python Greeks, VaR, sVaR and Aggregation.docx  main.py  pyproject.toml  requirements.txt  ~$mulating Murex Risk Pipelines in Python Greeks, VaR, sVaR and Aggregation.docx
docs/: model_methodology.md
notebooks/: 01_data_simulation.ipynb  02_greeks_analysis.ipynb  03_var_analysis.ipynb  04_full_pipeline.ipynb  05_aggregation.ipynb  06_svar.ipynb  07_plotly.ipynb
scripts/: __init__.py  bootstrap_data.py
src/aggregation/: hierarchy.py
src/config/: settings.py
src/data/: generate_positions.py  generate_structure.py  loaders.py  market_data.py
src/pricing/: fallback_bs.py  greeks.py  instruments.py  quantlib_setup.py
src/risk/: revaluation.py  svar.py  var.py
src/utils/: decorators.py  helpers.py  logger.py
tests/: conftest.py  test_aggregation.py  test_config.py  test_data_generation.py  test_greeks.py  test_loaders_utils_pipeline.py  test_pricing_models.py  test_revaluation.py  test_risk_models.py  test_var.py
